--- a/AppliedMachineLearningInPython/Assignment1.ipynb
+++ b/AppliedMachineLearningInPython/Assignment1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -187,40 +187,13 @@
        "dict_keys(['data', 'target', 'target_names', 'DESCR', 'feature_names'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cancer.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "569"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(cancer['data'])\n",
-    "#cancer['feature_names'].tolist() + cancer['target_names'].tolist()\n",
-    "#cancer['data'].tolist()\n",
-    "#cancer['target']\n",
-    "#an_arr = np.column_stack((cancer['data'], cancer['target']))\n",
-    "len(an_arr)"
    ]
   },
   {
@@ -236,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +220,7 @@
        "30"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -2124,7 +2097,7 @@
        "[569 rows x 31 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2153,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -2161,12 +2134,12 @@
     {
      "data": {
       "text/plain": [
-       "malignant    357\n",
-       "benign       212\n",
+       "benign       357\n",
+       "malignant    212\n",
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2178,7 +2151,7 @@
     "    # Your code here\n",
     "    target = cancerdf['target']\n",
     "    target =target.value_counts()\n",
-    "    target.index=['malignant', 'benign']\n",
+    "    target.index=['benign', 'malignant']\n",
     "    return target # Return your answer\n",
     "\n",
     "\n",
@@ -2199,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -2233,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -2261,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -2292,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -2303,41 +2276,8 @@
     "    means = cancerdf.mean()[:-1].values.reshape(1, -1)\n",
     "    \n",
     "    # Your code here\n",
-    "    \n",
-    "    return # Return your answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  1.41272917e+01,   1.92896485e+01,   9.19690334e+01,\n",
-       "          6.54889104e+02,   9.63602812e-02,   1.04340984e-01,\n",
-       "          8.87993158e-02,   4.89191459e-02,   1.81161863e-01,\n",
-       "          6.27976098e-02,   4.05172056e-01,   1.21685343e+00,\n",
-       "          2.86605923e+00,   4.03370791e+01,   7.04097891e-03,\n",
-       "          2.54781388e-02,   3.18937163e-02,   1.17961371e-02,\n",
-       "          2.05422988e-02,   3.79490387e-03,   1.62691898e+01,\n",
-       "          2.56772232e+01,   1.07261213e+02,   8.80583128e+02,\n",
-       "          1.32368594e-01,   2.54265044e-01,   2.72188483e-01,\n",
-       "          1.14606223e-01,   2.90075571e-01,   8.39458172e-02]])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cancerdf = answer_one()\n",
-    "means = cancerdf.mean()[:-1].values.reshape(1, -1)\n",
-    "means"
+    "    knn = answer_five()\n",
+    "    return knn.predict(means) # Return your answer"
    ]
   },
   {
@@ -2352,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -2378,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -2404,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -2467,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -3263,7 +3203,7 @@
     }
    ],
    "source": [
-    "accuracy_plot() "
+    "#accuracy_plot() "
    ]
   },
   {
